Added some css and moved  forward with JS

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@ body {
     cursor: pointer;
     outline: none;
     border: none;
+    margin-bottom: 1rem;
+    border-radius: 10px;
 }
 
 .restart-btn:hover {
