--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
 
 :root {
     --primary-color:#994500;
@@ -6,6 +7,8 @@
     --light-color:#f4f4f4;
     --lose-color:#dc3545;
     --win-color:#28a745;
+    --grey-color: #808080;
+    --offwhite-color: #f5f5f5;
 }
 
 * {
@@ -15,7 +18,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Audiowide', sans-serif;
     line-height: 1.6;
     background: #ffff;
     color: #333,
@@ -49,26 +52,32 @@ body {
 
 .header {
     text-align: center;
-    margin: 1rem 0;
+    margin: 2rem 0;
 }
 
 .header h1 {
+    background: var(--dark-color);
+    border-radius: 10px;
     margin-bottom: 1rem;
+    color: #fff;
 }
 
 .score {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     font-size: 1.2rem;
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
+
 
 .score p:first-child {
     background: var(--primary-color);
+    border-radius: 10px 0px 0px 10px;
 }
 
 .score p:last-child {
     background: var(--dark-color);
+    border-radius: 0px 10px 10px 0px;
 }
 
 .choices {
@@ -81,6 +90,24 @@ body {
 
 .choice {
     cursor: pointer;
+}
+
+#rock {
+    background-color: var(--offwhite-color);
+    padding: 1rem;
+    border-radius: 20px;
+}
+
+#paper {
+    background-color: var(--offwhite-color);
+    padding: 1rem;
+    border-radius: 20px;
+}
+
+#scissors {
+    background-color: var(--offwhite-color);
+    padding: 1rem;
+    border-radius: 20px;
 }
 
 .choice:hover {
